<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMeActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="About Me"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="338dp"
        android:layout_height="450dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="#89ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="68dp"
                android:layout_height="48dp"
                android:layout_marginLeft="130dp"
                android:onClick="playSound"
                app:srcCompat="@drawable/job" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/my_name"
                android:textSize="@dimen/h2" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="67dp"
                android:layout_height="50dp"
                android:layout_marginLeft="130dp"
                app:srcCompat="@drawable/a"
                tools:layout_editor_absoluteX="82dp"
                tools:layout_editor_absoluteY="368dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/my_name1"
                android:textSize="@dimen/h2" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="67dp"
                android:layout_height="57dp"
                android:layout_marginLeft="130dp"
                app:srcCompat="@drawable/karter" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/my_name2"
                android:textSize="@dimen/h2" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="68dp"
                android:layout_height="53dp"
                android:layout_marginLeft="130dp"
                app:srcCompat="@drawable/tan" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/my_name3"
                android:textSize="@dimen/h2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/app_major"
                android:textSize="@dimen/h2" />

            <TextView
                android:id="@+id/txvUniversity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="clickMap"
                android:text="@string/app_university"
                android:textSize="@dimen/h2" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>